Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sign-In Node</title>
-
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- <meta name="google-signin-client_id" content="508076693680-5t4m0ovu53qbgna979uml616g9mmfrop.apps.googleusercontent.com"> -->
     <meta name="google-signin-client_id" content="378382033972-b00fl4pc8jas6lla9tdl8n02pnsk2hsj.apps.googleusercontent.com">
+
 
 </head>
 
 <body>
 
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5f63c76b726e6320182f0635-517.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZjYzYzc2YjcyNmU2MzIwMTgyZjA2MzUiLCJub21icmUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQGdtYWlsLmNvbSIsIl9fdiI6MCwiaW1nIjoiNWY2M2M3NmI3MjZlNjMyMDE4MmYwNjM1LTUxNy5qcGcifSwiaWF0IjoxNjAyMTkyNDE5LCJleHAiOjE2MDIzNjUyMTl9.a7hQGR0nKkJPmGJIPU7EoAOODoFZDFUVcdFR9sQU_Kw" alt="">; -->
+    <!-- <img src="http://localhost:3000/imagen/productos/5f764957c133412280672423-594.jpg" alt="">; -->
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
